added h1 and footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <main>
+        <h1>Student Feedback Generator</h1>
         <section id="input-container">
             <section id="feedback-template"></section>
 
@@ -42,5 +43,8 @@
             </section>
         </section>
     </main>
+    <footer>
+        <h4>&copy 2022 - Kristian Hviid Nielsen </h4> 
+    </footer>
 </body>
 </html>
